# parallel_course

./: LICENSE  README.md
cpp_10/: example.cpp
cpp_10/parallel_algorithms/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  for_each  for_each.cpp  for_each.hpp  parallel_algorithms.sln  sort  sort.cpp  sort.hpp  thread_check  thread_check.cpp  thread_check.hpp
cpp_10/parallel_algorithms/spinlock_vs_atomic/: spinlock_vs_atomic.vcxproj  test.cpp
cuda/: README.md  basic_cuda.cu  cuda_kernel1.cu  cuda_kernel2.cu  main.cpp  mmult.h
cuda/01_cuda_introduction/01_hello_world/: Makefile
cuda/01_cuda_introduction/02_vector_addition/: Makefile
cuda/02_vector_addition/: Makefile
cuda/03_cuda_thread_programming/01_warp_and_thread_block/: Makefile
cuda/rpta_matrix/: unified.cpp
matrix_cuda/init_matrix/: gpu.cu  init_matrix.cu  main.cpp  mmult.h
matrix_cuda/normal/: Makefile  cpu.cpp  gpu.cu  main.cpp
matrix_cuda/performance/: cpu.cpp  cublas.c  gpu.cu  init_matrix.cu  main.cpp  main_copy.cpp  mmult.h
mpi/: bcast.c  hello  hello_mpi.c  reserve.sh  reserve2.sh  ring
openacc-example/: Makefile  README.md  dot.cc  dot.h  dot_main.cc  gaussian.cc  gaussian.h  main.cc  noacc_dot.cc  noacc_dot.h  noacc_gaussian.cc  noacc_gaussian.h  point.h
opencl/: hello.cpp
openmp/: hello-world  hello.cc  hello_world.c  integral_reducc.cc  paralle_for.c  parallel_for  placement  placement.c
pthreads/: thread_creation.c  thread_deadlock.c  thread_mutex.c  thread_random.c  thread_unsafe.c
shared_memory/: cond_pthreads  cond_pthreads.c  test_pthreads  test_pthreads.c
(+21 files in other folders)
